<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="IO" Id="{b8709c6f-7938-4560-bb9f-1c09e638ccfa}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	AI_SLICE_0 AT %I* : ARRAY[0..3] OF INT;
	DI_SLICE_0 AT %I* : ARRAY[0..7] OF BOOL;
	
	DO_SLICE_0 AT %Q* : ARRAY[0..7] OF BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>