<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="UI" Id="{cd6827f7-5ec8-440a-acfa-e4563c89eee4}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	FrameSelector	: FB_FRAMESELECTOR;
	PickButton		: BOOL;
	EStop			: BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>